feat(identity): implement private beta identity
